--- a/exemplosIniciais/index2.html
+++ b/exemplosIniciais/index2.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <mega charset="UTF-8">
-        <mega name="viewport"content="width=device-width,initial-scale=1.0">
-        <meta name="description" content="Este é um exemplo de utilização das tags relacionadas a tabela e listas">
-        <title>Exemplo Tabelas lista</title>
-    </head>
-    <body>
-        <h1>Exemplos de Tabalas HTML</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Este é um exemplo de utilização das tags relacionadas a tabela e listas"
+    />
+    <title>Exemplo Tabelas lista</title>
+  </head>
+  <body>
+    <h1>Exemplos de Tabalas HTML</h1>
 
-        <!--Exemplo de utilixação da tag table-->
-        <table>
-            <thead> <!--Cabeçalho da Tabela-->
-                <!--TH: define os títulos das colunas-->
-                <th>Nome</th>
-                <th>Idade</th>
-                <th>Cidade</th>
-            </thead>
-            <tbody>
-                <tr> <!--Define uma linha-->
-                    <!--TD: Define o valor da célula-->
-                    <td>Ana</td>
-                    <td>28</td>
-                    <td>Franca</td>
-                </tr>
-                <tr>
-                    <td>Matheus</td>
-                    <td>30</td>
-                    <td>Cristais Paulista</TD>
-                </tr>
-                <tr>
-                    <td>Miguel</td>
-                    <td>26</td>
-                    <td>Franca</td>
-                </tr>
-            </tbody>
-        </table>
-        
-        <h1>Exemplos de Listas</h1>
-        <h2>Lista Não Ordenada</h2>
-        <ul> <!--Unordered List-->
-            <li>Caderno</li>
-            <li>Caneta</li>
-            <li>Grampeador</li>
-            <li>Calculadora</li>
-        </ul>
-    </body>
+    <!--Exemplo de utilixação da tag table-->
+    <table>
+      <thead>
+        <!--Cabeçalho da Tabela-->
+        <!--TH: define os títulos das colunas-->
+        <th>Nome</th>
+        <th>Idade</th>
+        <th>Cidade</th>
+      </thead>
+      <tbody>
+        <tr>
+          <!--Define uma linha-->
+          <!--TD: Define o valor da célula-->
+          <td>Ana</td>
+          <td>28</td>
+          <td>Franca</td>
+        </tr>
+        <tr>
+          <td>Matheus</td>
+          <td>30</td>
+          <td>Cristais Paulista</td>
+        </tr>
+        <tr>
+          <td>Miguel</td>
+          <td>26</td>
+          <td>Franca</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <!--Exemplo de lista Não Ordenada-->
+    <h1>Exemplos de Listas</h1>
+    <h2>Lista Não Ordenada</h2>
+    <ul>
+      <!--Unordered List-->
+      <li>Caderno</li>
+      <li>Caneta</li>
+      <li>Grampeador</li>
+      <li>Calculadora</li>
+    </ul>
+
+    <!--Exemplo de lista Ordenada-->
+    <br />
+    <h2>Lista Ordenada - Passos para resolver um problema matemático</h2>
+    <ol>
+      <!--Ordered List = Lista Ordenada-->
+      <li>Ler o enunciado com atenção;</li>
+      <li>Identificar as informações fornecidas;</li>
+      <li>Aplicar a fórmula ou metodo adequado;</li>
+      <li>Resolver as operações matemáticas.</li>
+    </ol>
+  </body>
 </html>
