--- a/exemploQuadroMedalhas/indexEstilizado.html
+++ b/exemploQuadroMedalhas/indexEstilizado.html
@@ -8,12 +8,51 @@
       content="Quadro de medalhas dos jogos olímpicos (Olimpiadas) de Paris 2024."
     />
     <title>Quadro de medalhas</title>
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: rgb(191, 242, 253);
+        /* Estilizando a tag body */
+      }
+
+      table {
+        border: 2px solid black;
+        width: 30%;
+        margin: 30px auto;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        border-collapse: collapse;
+        background-color: rgb(203, 232, 255);
+        /* Estilizando a tag table */
+      }
+
+      th,
+      td {
+        border: 1px solid black;
+        text-align: center;
+        padding: 8px;
+      }
+      th {
+        background-color: rgb(91, 230, 255);
+        color: rgb(8, 29, 124);
+      }
+
+      tr:nth-child(1) {
+        background-color: gold;
+      }
+      tr:nth-child(2) {
+        background-color: silver;
+      }
+      tr:nth-child(3) {
+        background-color: burlywood;
+      }
+    </style>
   </head>
   <body>
-    <h2>Quadro de medalhas - Paris 2024</h2>
+    <center><h2>Quadro de medalhas - Paris 2024</h2></center>
     <table>
       <thead>
         <tr>
+          <th>Ranking</th>
           <th>País</th>
           <th>Ouro</th>
           <th>Prata</th>
@@ -23,6 +62,7 @@
       </thead>
       <tbody>
         <tr>
+          <td>1°</td>
           <td>EUA</td>
           <td>40</td>
           <td>44</td>
@@ -30,6 +70,7 @@
           <td>126</td>
         </tr>
         <tr>
+          <td>2°</td>
           <td>China</td>
           <td>40</td>
           <td>27</td>
@@ -37,6 +78,7 @@
           <td>91</td>
         </tr>
         <tr>
+          <td>3°</td>
           <td>Japão</td>
           <td>20</td>
           <td>12</td>
@@ -44,6 +86,7 @@
           <td>45</td>
         </tr>
         <tr>
+          <td>4°</td>
           <td>Austrália</td>
           <td>18</td>
           <td>19</td>
@@ -51,6 +94,7 @@
           <td>53</td>
         </tr>
         <tr>
+          <td>5°</td>
           <td>França</td>
           <td>16</td>
           <td>26</td>
