--- a/tipos_estilos/exemplo2_teste/index.html
+++ b/tipos_estilos/exemplo2_teste/index.html
@@ -22,5 +22,40 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="home">
+        <h2>Bem-vindo(a) ao Ingressos Fácil</h2>
+        <p>
+          Aqui você encontra ingressos para os melhores eventos da sua cidade!
+        </p>
+      </section>
+
+      <section id="eventos">
+        <h2>Próximos Eventos</h2>
+        <div class="eventos-container">
+          <div class="eventos-item">
+            <h3>Show de Rock</h3>
+            <p>Data: 25 de setembro de 2025</p>
+          </div>
+
+          <div class="eventos-item">
+            <h3>Teatro: A Comédia de Vida</h3>
+            <p>Data: 30 de outubto de 2025</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>
+          Somos uma empresa dedicada a facilitar a compra de ingressos para
+          eventos culturais e esportivos
+        </p>
+      </section> 
+    </main>
+
+    <footer>
+      <p>&copy; 2024 IngressosFácil - Todos os Direitos reservados</p>
+    </footer>
   </body>
 </html>
